--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,19 +1,19 @@
 <nav>
   <ul class="pagination">
     <li class="page-item" 
-      [appClass]= "{ disabled: currentPage === 0}">
+      [ngClass]= "{ disabled: currentPage === 0}">
       <a class="page-link"(click)="currentPage= currentPage - 1">Prev</a>
     </li>
     <ng-container *ngFor="let image of images; let i = index;">
     <li class="page-item"
-        [appClass]="{active: i=== currentPage}"
+        [ngClass]="{active: i=== currentPage}"
         *ngIf="checkWindowIndex(i)"
         >
       <a (click)="currentPage = i" class="page-link">{{i +1}}</a>
     </li>
   </ng-container>
     <li class="page-item"
-    [appClass]= "{ disabled: currentPage === images.length -1 }">
+    [ngClass]= "{ disabled: currentPage === images.length -1 }">
       <a class="page-link" (click)="currentPage = currentPage + 1" > Next</a>
      </li> 
   </ul>
