--- a/src/styles.css
+++ b/src/styles.css
@@ -1,29 +1,29 @@
 /* You can add global styles to this file, and also import other style files */
 @import "bootstrap/dist/css/bootstrap.css";
 
-.pagination {
+nav .pagination {
   display: flex;
   justify-content: center;
   list-style: none;
   padding: 0;
 }
 
-.page-item {
+nav.page-item {
   margin: 0 5px;
 }
 
-.page-item.disabled .page-link {
+nav.page-item.disabled .page-link {
   pointer-events: none;
   color: grey;
 }
 
-.page-item.active .page-link {
+nav.page-item.active .page-link {
   font-weight: bold;
   color: white;
   background-color: #007bff;
 }
 
-.page-link {
+nav.page-link {
   cursor: pointer;
   padding: 0.5rem 0.75rem;
   border: 1px solid #dee2e6;
